website/versioned_docs/0.45/testing.md
---
id: version-0.45-testing
title: testing
original_id: testing
---
<a id="content"></a><h1><a class="anchor" name="running-tests-and-contributing"></a>Running Tests and Contributing <a class="hash-link" href="docs/testing.html#running-tests-and-contributing">#</a></h1><div><p>This document is about running tests on React Native itself. If you're interested in testing a React Native app, check out the <a href="http://facebook.github.io/jest/docs/tutorial-react-native.html" target="_blank">React Native Tutorial</a> on the Jest website.</p><p>The React Native repo has several tests you can run to verify you haven't caused a regression with your PR.  These tests are run with the <a href="https://travis-ci.org/facebook/react-native/builds" target="_blank">Travis</a> and <a href="https://circleci.com/gh/facebook/react-native" target="_blank">CircleCI</a> continuous integration systems, which will automatically annotate pull requests with the test results.</p><p>Whenever you are fixing a bug or adding new functionality to React Native, you should add a test that covers it. Depending on the change you're making, there are different types of tests that may be appropriate.</p><h2><a class="anchor" name="javascript-tests"></a>JavaScript Tests <a class="hash-link" href="docs/testing.html#javascript-tests">#</a></h2><h3><a class="anchor" name="jest"></a>Jest <a class="hash-link" href="docs/testing.html#jest">#</a></h3><p>Jest tests are JavaScript-only tests run on the command line with node. You can run the existing React Native jest tests with:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ npm test</div><p>It's a good idea to add a Jest test when you are working on a change that only modifies JavaScript code.</p><p>The tests themselves live in the <code>__tests__</code> directories of the files they test.  See <a href="https://github.com/facebook/react-native/blob/master/Libraries/Components/Touchable/__tests__/TouchableHighlight-test.js" target="_blank"><code>TouchableHighlight-test.js</code></a> for a basic example.</p><h3><a class="anchor" name="flow"></a>Flow <a class="hash-link" href="docs/testing.html#flow">#</a></h3><p>You should also make sure your code passes <a href="https://flowtype.org/" target="_blank">Flow</a> tests. These can be run using:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ npm run flow</div><h2><a class="anchor" name="android"></a>Android <a class="hash-link" href="docs/testing.html#android">#</a></h2><h3><a class="anchor" name="unit-tests"></a>Unit Tests <a class="hash-link" href="docs/testing.html#unit-tests">#</a></h3><p>The Android unit tests do not run in an emulator. They just use a normal Java installation. The default macOS Java install is insufficient, you may need to install <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html" target="_blank">Java 8 (JDK8)</a>. You can type <code>javac -version</code> in a terminal to see what version you have:</p><div class="prism language-javascript">$ javac <span class="token operator">-</span>version
javac <span class="token number">1.8</span><span class="token punctuation">.</span>0_111</div><p>The version string <code>1.8.x_xxx</code> corresponds to JDK 8.</p><p>You also need to install the <a href="https://buckbuild.com/setup/install.html" target="_blank">Buck build tool</a>.</p><p>To run the Android unit tests:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ <span class="token punctuation">.</span><span class="token operator">/</span>scripts<span class="token operator">/</span>run<span class="token operator">-</span>android<span class="token operator">-</span>local<span class="token operator">-</span>unit<span class="token operator">-</span>tests<span class="token punctuation">.</span>sh</div><p>It's a good idea to add an Android unit test whenever you are working on code that can be tested by Java code alone. The Android unit tests live under <a href="https://github.com/facebook/react-native/tree/master/ReactAndroid/src/test/java/com/facebook/react" target="_blank"><code>ReactAndroid/src/tests</code></a>, so you can browse through that directory for good examples of tests.</p><h3><a class="anchor" name="integration-tests"></a>Integration Tests <a class="hash-link" href="docs/testing.html#integration-tests">#</a></h3><p>To run the integration tests, you need to install the Android NDK. See <a href="docs/android-building-from-source.html#prerequisites" target="_blank">Prerequisites</a>.</p><p>You also need to install the <a href="https://buckbuild.com/setup/install.html" target="_blank">Buck build tool</a>.</p><p>We recommend running the Android integration tests in an emulator, although you can also use a real Android device. It's a good idea to keep the emulator running with a visible window. That way if your tests stall, you can look at the emulator to debug.</p><p>Some devices and some emulator configurations may not work with the tests. We do maintain an emulator configuration that works, as the standard for testing. To run this emulator config:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ <span class="token punctuation">.</span><span class="token operator">/</span>scripts<span class="token operator">/</span>run<span class="token operator">-</span>android<span class="token operator">-</span>emulator<span class="token punctuation">.</span>sh</div><p>Once you have an emulator running, to run the integration tests:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ <span class="token punctuation">.</span><span class="token operator">/</span>scripts<span class="token operator">/</span>run<span class="token operator">-</span>android<span class="token operator">-</span>local<span class="token operator">-</span>integration<span class="token operator">-</span>tests<span class="token punctuation">.</span>sh</div><p>The integration tests should only take a few minutes to run on a modern developer machine.</p><p>It's a good idea to add an Android integration test whenever you are working on code that needs both JavaScript and Java to be tested in conjunction. The Android integration tests live under <a href="https://github.com/facebook/react-native/tree/master/ReactAndroid/src/androidTest/java/com/facebook/react/tests" target="_blank"><code>ReactAndroid/src/androidTest</code></a>, so you can browse through that directory for good examples of tests.</p><h2><a class="anchor" name="ios"></a>iOS <a class="hash-link" href="docs/testing.html#ios">#</a></h2><h3><a class="anchor" name="integration-tests"></a>Integration Tests <a class="hash-link" href="docs/testing.html#integration-tests">#</a></h3><p>React Native provides facilities to make it easier to test integrated components that require both native and JS components to communicate across the bridge.  The two main components are <code>RCTTestRunner</code> and <code>RCTTestModule</code>.  <code>RCTTestRunner</code> sets up the ReactNative environment and provides facilities to run the tests as <code>XCTestCase</code>s in Xcode (<code>runTest:module</code> is the simplest method).  <code>RCTTestModule</code> is exported to JS as <code>NativeModules.TestModule</code>.  </p><p>The tests themselves are written in JS, and must call <code>TestModule.markTestCompleted()</code> when they are done, otherwise the test will timeout and fail.  Test failures are primarily indicated by throwing a JS exception.  It is also possible to test error conditions with <code>runTest:module:initialProps:expectErrorRegex:</code> or <code>runTest:module:initialProps:expectErrorBlock:</code> which will expect an error to be thrown and verify the error matches the provided criteria.  </p><p>See the following for example usage and integration points:</p><ul><li><a href="https://github.com/facebook/react-native/blob/master/IntegrationTests/IntegrationTestHarnessTest.js" target="_blank"><code>IntegrationTestHarnessTest.js</code></a></li><li><a href="https://github.com/facebook/react-native/blob/master/RNTester/RNTesterIntegrationTests/RNTesterIntegrationTests.m" target="_blank"><code>RNTesterIntegrationTests.m</code></a></li><li><a href="https://github.com/facebook/react-native/blob/master/IntegrationTests/IntegrationTestsApp.js" target="_blank"><code>IntegrationTestsApp.js</code></a></li></ul><p>You can run integration tests locally with cmd+U in the IntegrationTest and RNTester apps in Xcode, or by running the following in the command line on macOS:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ <span class="token punctuation">.</span><span class="token operator">/</span>scripts<span class="token operator">/</span>objc<span class="token operator">-</span>test<span class="token operator">-</span>ios<span class="token punctuation">.</span>sh</div><blockquote><p>Your Xcode install will come with a variety of Simulators running the latest OS. You may need to manually create a new Simulator to match what the <code>XCODE_DESTINATION</code> param in the test script.</p></blockquote><h3><a class="anchor" name="screenshot-snapshot-tests"></a>Screenshot/Snapshot Tests <a class="hash-link" href="docs/testing.html#screenshot-snapshot-tests">#</a></h3><p>A common type of integration test is the snapshot test.  These tests render a component, and verify snapshots of the screen against reference images using <code>TestModule.verifySnapshot()</code>, using the <a href="https://github.com/facebook/ios-snapshot-test-case" target="_blank"><code>FBSnapshotTestCase</code></a> library behind the scenes.  Reference images are recorded by setting <code>recordMode = YES</code> on the <code>RCTTestRunner</code>, then running the tests.  Snapshots will differ slightly between 32 and 64 bit, and various OS versions, so it's recommended that you enforce tests are run with the correct configuration.  It's also highly recommended that all network data be mocked out, along with other potentially troublesome dependencies.  See <a href="https://github.com/facebook/react-native/blob/master/IntegrationTests/SimpleSnapshotTest.js" target="_blank"><code>SimpleSnapshotTest</code></a> for a basic example.</p><p>If you make a change that affects a snapshot test in a PR, such as adding a new example case to one of the examples that is snapshotted, you'll need to re-record the snapshot reference image.  To do this, simply change to <code>_runner.recordMode = YES;</code> in <a href="https://github.com/facebook/react-native/blob/master/RNTester/RNTesterIntegrationTests/RNTesterSnapshotTests.m#L42" target="_blank">RNTester/RNTesterSnapshotTests.m</a>, re-run the failing tests, then flip record back to <code>NO</code> and submit/update your PR and wait to see if the Travis build passes.</p><h2><a class="anchor" name="apple-tv"></a>Apple TV <a class="hash-link" href="docs/testing.html#apple-tv">#</a></h2><p>The same tests discussed above for iOS will also run on tvOS.  In the RNTester Xcode project, select the RNTester-tvOS target, and you can follow the same steps above to run the tests in Xcode.</p><p>You can run Apple TV unit and integration tests locally by running the following in the command line on macOS:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ <span class="token punctuation">.</span><span class="token operator">/</span>scripts<span class="token operator">/</span>objc<span class="token operator">-</span>test<span class="token operator">-</span>tvos<span class="token punctuation">.</span>sh <span class="token punctuation">(</span>make sure the line `TEST<span class="token operator">=</span><span class="token string">"test"</span>` is uncommented<span class="token punctuation">)</span></div><h2><a class="anchor" name="end-to-end-tests"></a>End-to-end tests <a class="hash-link" href="docs/testing.html#end-to-end-tests">#</a></h2><p>Finally, make sure end-to-end tests run successfully by executing the following script:</p><div class="prism language-javascript">$ cd react<span class="token operator">-</span>native
$ <span class="token punctuation">.</span><span class="token operator">/</span>scripts<span class="token operator">/</span>test<span class="token operator">-</span>manual<span class="token operator">-</span>e2e<span class="token punctuation">.</span>sh</div><h2><a class="anchor" name="website"></a>Website <a class="hash-link" href="docs/testing.html#website">#</a></h2><p>The React Native website is hosted on GitHub pages and is automatically generated from Markdown sources as well as comments in the JavaScript source files. It's always a good idea to check that the website is generated properly whenever you edit the docs.</p><div class="prism language-javascript">$ cd website
$ npm install
$ npm start</div><p>Then open <a href="http://localhost:8079/react-native/index.html">http://localhost:8079/react-native/index.html</a> in your browser.</p></div><div class="docs-prevnext"><a class="docs-prev" href="docs/upgrading.html#content">← Prev</a><a class="docs-next" href="docs/understanding-cli.html#content">Next →</a></div><p class="edit-page-block">You can <a target="_blank" href="https://github.com/facebook/react-native/blob/master/docs/Testing.md">edit the content above on GitHub</a> and send us a pull request!</p>